sandbox/in_arbeit/magick_6.9.12.98/sandbox/include-C/magick/wand/fertig/mogrify.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickWand mogrify command-line method.
*/
#ifndef MAGICKWAND_MOGRIFY_H
#define MAGICKWAND_MOGRIFY_H


typedef MagickBooleanType
  (*MagickCommand)(ImageInfo *,int,char **,char **,ExceptionInfo *);

extern  MagickBooleanType
  MagickCommandGenesis(ImageInfo *,MagickCommand,int,char **,char **,    ExceptionInfo *);
extern  MagickBooleanType
  MogrifyImage(ImageInfo *,const int,const char **,Image **,ExceptionInfo *);
extern  MagickBooleanType
  MogrifyImageCommand(ImageInfo *,int,char **,char **,ExceptionInfo *);
extern  MagickBooleanType
  MogrifyImageInfo(ImageInfo *,const int,const char **,ExceptionInfo *);
extern  MagickBooleanType
  MogrifyImageList(ImageInfo *,const int,const char **,Image **,    ExceptionInfo *);
extern  MagickBooleanType
  MogrifyImages(ImageInfo *,const MagickBooleanType,const int,const char **,    Image **,ExceptionInfo *);


#endif